--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,9 @@
     "jsx": "preserve",
     "incremental": true,
     "baseUrl": "src/",
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "noEmitOnError": true,
     "plugins": [
       {
         "name": "next"
